--- a/base.html
+++ b/base.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small>Mon - Fri : 08.00 AM - 09.00 PM</small>
+                    <small>Mon - Sun : 08.00 AM - 09.00 PM</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -138,7 +138,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-4 text-white animated slideInDown">Pioneers Of Solar And Renewable Energy</h1>
+                                <h1 class="display-4 text-white animated slideInDown">Pioneers Of Solar And Renewable Energy Sourses</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
