--- a/base.html
+++ b/base.html
@@ -177,7 +177,7 @@
             <div class="row g-5"> 
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-white mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Lusaka, Zambia</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>++260 96 3944152</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
