--- a/base.html
+++ b/base.html
@@ -178,7 +178,7 @@
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-white mb-4">Address</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Lusaka, Zambia</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>++260 96 3944152</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>++2608500000</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
