--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html"
+                    <a href="#"
                         class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="#" class="nav-item nav-link">About</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle"
                             data-bs-toggle="dropdown">Services</a>
@@ -113,8 +113,8 @@
                             <a href="#" class="dropdown-item">Environment</a>
                         </div>
                     </div>
-                    <a href="project.html" class="nav-item nav-link">Project</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="#" class="nav-item nav-link">Project</a>
+                    <a href="#" class="nav-item nav-link">Contact</a>
                 </div>
                 <a href
                     class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Get
@@ -720,7 +720,7 @@
                         data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="d-flex">
-                                <img class="img-fluid w-75" src="img/team_member.jpg"
+                                <img class="img-fluid w-75" src="img/ande.jpg"
                                     alt>
                                 <div class="team-social w-25">
                                     <a
@@ -739,6 +739,32 @@
                             <div class="p-4">
                                 <h5>Ande Chileshe</h5>
                                 <span>Founder, CEO and Civil Engineer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp"
+                        data-wow-delay="0.1s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="d-flex">
+                                <img class="img-fluid w-75" src="img/profile_pic.png"
+                                    alt>
+                                <div class="team-social w-25">
+                                    <a
+                                        class="btn btn-lg-square btn-outline-primary rounded-circle mt-3"
+                                        href><i
+                                            class="fab fa-facebook-f"></i></a>
+                                    <a
+                                        class="btn btn-lg-square btn-outline-primary rounded-circle mt-3"
+                                        href><i class="fab fa-twitter"></i></a>
+                                    <a
+                                        class="btn btn-lg-square btn-outline-primary rounded-circle mt-3"
+                                        href><i
+                                            class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                            <div class="p-4">
+                                <h5>Mrs Chileshe</h5>
+                                <span>Co Founder, CEO and Civil Engineer</span>
                             </div>
                         </div>
                     </div>
