changed consultation text to dedcation

--- a/index.html
+++ b/index.html
@@ -508,8 +508,8 @@
                                                 class="fa fa-drafting-compass text-white"></i>
                                         </div>
                                         <div class="ms-4">
-                                            <p class="mb-0">Free</p>
-                                            <h5 class="mb-0">Consultation</h5>
+                                            <p class="mb-0">Team</p>
+                                            <h5 class="mb-0">Dedication</h5>
                                         </div>
                                     </div>
                                 </div>
